--- a/Flask-Routing-Lab/templates/try.html
+++ b/Flask-Routing-Lab/templates/try.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home</title>
+  <title>try page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
+      .fakeimg {@app.route('/home')
+def home():
+    return render_template('home.html')
+    height: 200px;
+    background: #aaa;
+  }
   .box{border-width:3px; border-style:solid; border-color: black;}
   .pic{width:300; hieght:400}
   </style>
@@ -31,9 +37,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/home">Home</a></li>
-        <li><a href="/cart">cart</a></li>
-        <li><a href="/product">product</a></li>
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Page 2</a></li>
+        <li><a href="#">Page 3</a></li>
       </ul>
     </div>
   </div>
